# html

./: README.md
E-mail/: index.php
Login/: activate.php  enter.php  index.php  logdata.php  login.php  recover.php  register.php  server.php
Login/css/: style.css
Login/includes/: conn.php  footer.html  header.php  modal-index.html
Login/js/: script.js
MAC/: Procedimientos.txt  data.txt  index.php  macs.sql  review.php  test.php
MAC/css/: style.css
MAC/includes/: conn.php  footer.html  header.php  modal_index.html  nav_index.html
MAC/js/: script.js
Prome/: index.html  package-lock.json  package.json
TESTS/Color/: index.html
TESTS/Color/css/: style.css
TESTS/Color/js/: script.js
Test/: index.php  logon.php
Test/includes/: conn.php
TestBool/: index.php
TestBool/includes/: conn.php
moodle/: config.php  githash.php
rust-web/: Cargo.toml
rust-web/npm/: package.json
wordpress/: wp-config.php
