[package]
name = "rocket-web-formular-example"
version = "1.0.0"
authors = ["Patrick & César <pmurphy@laberit.com; cmatelat@laberit.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
tera = "1.19.1"
captcha = "0.0.9"
sha2 = "0.10.8"
rand = "0.8.5"
fluent-templates = { version = "0.9.2", features = ["tera"] }
pretty_env_logger = "0.5.0"
serde_json = "1.0.116"
serde = { version = "1.0.197", features = ["derive"] }
chrono= "0.4.38"

[dependencies.rocket_dyn_templates]
version = "0.1.0"
features = ["tera"]

